# gfxengine

./: .gitmodules  CMakeLists.txt
cmake/: assign_source_group.cmake  gfxengine.cmake  imgui.cmake
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: base_application.cpp  file.cpp  frame.cpp  graphics.cpp  image.cpp  logger.cpp  main.cpp  noise_generator.cpp  platform.cpp  window.cpp
src/include/gfxengine/: base_application.hpp  buffered_cstr.hpp  frame.hpp  graphics.hpp  image.hpp  input_controller.hpp  logger.hpp  material.hpp  math.hpp  my_windows.hpp  noise_generator.hpp  platform.hpp  window.hpp  window_event_handler.hpp
src/private/: my_windows.hpp  wglext.h
